--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -15,7 +15,7 @@
       "name": "latexmk(uplatex) for kaishi",
       "command": "latexmk",
       "args": [
-        "-e", "$latex                = 'uplatex %O -synctex=1 -file-line-error -halt-on-error -interaction=nonstopmode %S'",
+        "-e", "$latex                = 'uplatex %O -synctex=1 -file-line-error -halt-on-error %S'",
         "-e", "$bibtex               = 'upbibtex %O %B'",
         "-e", "$biber                = 'biber %O --bblencoding=utf8 -u -U --output_safechars %B'",
         "-e", "$makeindex            = 'upmendex %O -o %D %S'",
